# tradebuddy

./: .env.docker  .env.example  .gitignore  9_15_ema_crossover_strategy.md  API_KEYS_GUIDE.md  CLAUDE.md  DELTA_EXCHANGE_INDIA_UPDATE.md  Dockerfile  Makefile  README.md  SIMPLIFICATION_PLAN.md  UI_IMPROVEMENTS.md  analyze_delta_position.py  branch_comparison_report.txt  compare_test_results.py  copy.sh  debug_ticker.py  demo_complete_system.py  docker-compose.yml  find_btc_symbol.py  pyproject.toml  run_local.sh  run_tradebuddy.py  test_analysis.py  test_backtesting.py  test_both_strategies.py  test_branch_comparison.py  test_candlestick_fix.py  test_cli_backtesting.py  test_cli_quick.py  test_complete_ist_system.py  test_ema_fix.py  test_enhanced_direct.py  test_enhanced_features.py  test_functionality.py  test_immediate_candle_display.py  test_inr_update.py  test_integration.py  test_ist_candlestick_display.py  test_ist_conversion.py  (+13 more)
docs/: docker-deployment.md  fingpt-deployment.md
requirements/: base.txt  dev.txt  prod.txt  test.txt
src/: __init__.py  __main__.py
src/analysis/: __init__.py  ema_analysis.py  indicators.py  market_context.py  ollama_client.py
src/analysis/ai_models/: __init__.py  ai_interface.py  comparative_analyzer.py  fingpt_client.py  model_factory.py  ollama_wrapper.py
src/analysis/scoring/: __init__.py  signal_scorer.py
src/analysis/strategies/: __init__.py  base_strategy.py  combined.py  ema_crossover.py  ema_crossover_v2.py  enhanced_base_strategy.py  support_resistance.py
src/backtesting/: __init__.py  engine.py  metrics.py  models.py  portfolio.py  reports.py  signal_quality.py
src/cli/: __init__.py  displays.py  main.py  realtime.py
src/core/: __init__.py  config.py  constants.py  exceptions.py  models.py
src/data/: __init__.py  delta_client.py  websocket_client.py
src/infrastructure/: __init__.py
src/utils/: __init__.py  data_helpers.py  environment.py  helpers.py  logging.py  logging_utils.py  risk_management.py  type_conversion.py
tests/: __init__.py  conftest.py
tests/fixtures/: __init__.py
tests/integration/: __init__.py  test_complete_system.py
tests/unit/: __init__.py  test_cli.py  test_config.py  test_data_helpers.py  test_edge_cases_functionality.py  test_environment.py  test_models.py  test_type_conversion.py
tests/unit/analysis/: test_ema_crossover_v2_functionality.py  test_enhanced_ema_analysis_functionality.py  test_indicators.py  test_indicators_functionality.py  test_indicators_simple.py  test_ollama_client.py  test_ollama_functionality.py  test_refactored_components_functionality.py  test_strategies.py  test_strategy_functionality.py
tests/unit/analysis/ai_models/: test_ai_interface.py  test_fingpt_client.py  test_integration.py  test_model_factory.py
tests/unit/backtesting/: __init__.py  test_backtesting_functionality.py
tests/unit/cli/: test_cli_workflow_functionality.py  test_live_candlestick_timestamp.py
tests/unit/data/: test_data_functionality.py  test_delta_client.py  test_websocket_client.py
